kubernetes/development/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: react
  name: react
  namespace: development
spec:
  replicas: 5
  selector:
    matchLabels:
      app: react
  strategy: {}
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - image: _{_IMAGE_}_
        imagePullPolicy: Always
        name: react
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
